Fix alignment of reorder-custom-inputs icons

--- a/addons/editor-compact/userstyle.css
+++ b/addons/editor-compact/userstyle.css
@@ -554,6 +554,9 @@ body:not(.sa-columns-enabled) [class*="gui_tab-panel"] [class*="gui_extension-bu
 .blocklyTextRemoveIcon {
   top: -35px;
 }
+.sa-reorder-inputs-arrow {
+  top: -44px;
+}
 [class*="custom-procedures_body"] [role="button"] {
   padding: 0.5rem;
 }
